--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Focus Frame</title>
   </head>
-  <body class="body">
+  <body class="dark-theme">
     <header>
       <div class="menucontainer">
         <nav class="menu">
