--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <section id="hero-section">
         <div class="hero-container">
           <h1 class="hero">Discover the magic of photography in our school</h1>
+          <img src="images/foto.jpg" alt="Hero Image" class="hero-image" />
           <p class="hero-description">
             Our photography school offers an unforgettable journey, where you
             can learn the basics of composition, master technical skills,
