--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
         </div>
       </section>
 
-      <section id="section2">
-        <div class="about-container">
-          <h2 class="about-header">MASTER YOUR PHOTOGRAPHY SKILLS WITH US!</h2>
+      <section id="panel-section">
+        <div class="panel-container">
+          <h2 class="panel-header">
+            MASTER
+            <span class="panel-highlight">YOUR PHOTOGRAPHY</span>
+            SKILLS WITH US!
+          </h2>
         </div>
       </section>
 
