--- a/index.html
+++ b/index.html
@@ -52,16 +52,24 @@
         </div>
       </section>
 
-      <section id="section3">
-        <h3 class="header-us">About Us</h3>
-        <div class="des-about">
-          <p class="des-text">
+      <section id="about-section">
+        <h3 class="about-us">
+          About
+          <span class="about-highlight">Us</span>
+        </h3>
+        <div class="about-container">
+          <img
+            src="images/camera.jpg"
+            alt="About Us Image"
+            class="about-image"
+          />
+          <p class="about-text">
             Our photography school is designed to teach you everything you need
             to know about this magical art. Regardless of your experience or
             skill level, we offer a wide range of courses to suit your needs and
             interests.
           </p>
-          <p class="des-text">
+          <p class="about-text">
             Our teaching team consists of experienced photographers who strive
             not only to share their knowledge, but also to inspire you to
             develop your unique creativity.
