--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
 
       <section id="about-section">
-        <h3 class="about-us">
+        <h3 class="about-title">
           About
           <span class="about-highlight">Us</span>
         </h3>
@@ -63,17 +63,19 @@
             alt="About Us Image"
             class="about-image"
           />
-          <p class="about-text">
-            Our photography school is designed to teach you everything you need
-            to know about this magical art. Regardless of your experience or
-            skill level, we offer a wide range of courses to suit your needs and
-            interests.
-          </p>
-          <p class="about-text">
-            Our teaching team consists of experienced photographers who strive
-            not only to share their knowledge, but also to inspire you to
-            develop your unique creativity.
-          </p>
+          <div class="about-content">
+            <p class="about-text">
+              Our photography school is designed to teach you everything you
+              need to know about this magical art. Regardless of your experience
+              or skill level, we offer a wide range of courses to suit your
+              needs and interests.
+            </p>
+            <p class="about-text">
+              Our teaching team consists of experienced photographers who strive
+              not only to share their knowledge, but also to inspire you to
+              develop your unique creativity.
+            </p>
+          </div>
         </div>
       </section>
     </main>
