about-description-container

--- a/index.html
+++ b/index.html
@@ -53,28 +53,30 @@
       </section>
 
       <section id="about-section">
-        <h3 class="about-title">
-          About
-          <span class="about-highlight">Us</span>
-        </h3>
         <div class="about-container">
-          <img
-            src="images/camera.jpg"
-            alt="About Us Image"
-            class="about-image"
-          />
-          <div class="about-content">
-            <p class="about-text">
-              Our photography school is designed to teach you everything you
-              need to know about this magical art. Regardless of your experience
-              or skill level, we offer a wide range of courses to suit your
-              needs and interests.
-            </p>
-            <p class="about-text">
-              Our teaching team consists of experienced photographers who strive
-              not only to share their knowledge, but also to inspire you to
-              develop your unique creativity.
-            </p>
+          <h3 class="about-title">
+            About
+            <span class="about-highlight">Us</span>
+          </h3>
+          <div class="about-description-container">
+            <img
+              src="images/camera.jpg"
+              alt="About Us Image"
+              class="about-image"
+            />
+            <div class="about-content">
+              <p class="about-text-first">
+                Our photography school is designed to teach you everything you
+                need to know about this magical art. Regardless of your
+                experience or skill level, we offer a wide range of courses to
+                suit your needs and interests.
+              </p>
+              <p class="about-text-second">
+                Our teaching team consists of experienced photographers who
+                strive not only to share their knowledge, but also to inspire
+                you to develop your unique creativity.
+              </p>
+            </div>
           </div>
         </div>
       </section>
