--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="menu">
           <a href="#" class="header-logo">Focus.frame</a>
           <ul>
+            <li><a href="section">Main</a></li>
             <li><a href="#section1">ABOUT US</a></li>
             <li><a href="#section2">OUR COURSES</a></li>
             <li><a href="#section3">OUR MENTORS</a></li>
@@ -65,7 +66,7 @@
               class="about-image"
             />
             <div class="about-content">
-              <p class="about-text-first">
+              <p class="about-text">
                 Our photography school is designed to teach you everything you
                 need to know about this magical art. Regardless of your
                 experience or skill level, we offer a wide range of courses to
@@ -75,7 +76,7 @@
                 also to inspire you to develop and express your unique
                 creativity.
               </p>
-              <p class="about-text-second">
+              <p class="about-text">
                 Our courses cover a wide range of topics, from the basics of
                 photography and equipment use to professional image processing
                 and creating impressive compositions. You will have the
