--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </h3>
           <div class="about-description-container">
             <img
-              src="images/camera.jpg"
+              src="images/cameraa.jpg"
               alt="About Us Image"
               class="about-image"
             />
