--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
           </div>
         </div>
       </section>
+      <section id="our-courses-section">
+        <div class="our-courses-container">
+          <div class="our-courses-header">
+            <h2 class="our-courses-title">OUR <span class="our-courses-highlight">COURSES</span></h2>
+            <p class="our-courses-description">At our photography school, we offer a variety of courses that cover all aspects of this fascinating art. Regardless of your experience or skill level, we have courses to suit your needs and goals.</p>
+          </div>
+          <div class="our-content">
+            <p>This is additional content for section 1.</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
