--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <nav class="menu">
           <a href="#" class="header-logo">Focus.frame</a>
           <ul>
-            <li><a href="section">Main</a></li>
             <li><a href="#section1">ABOUT US</a></li>
             <li><a href="#section2">OUR COURSES</a></li>
             <li><a href="#section3">OUR MENTORS</a></li>
@@ -90,11 +89,64 @@
       <section id="our-courses-section">
         <div class="our-courses-container">
           <div class="our-courses-header">
-            <h2 class="our-courses-title">OUR <span class="our-courses-highlight">COURSES</span></h2>
+            <h3 class="our-courses-title">OUR <span class="our-courses-highlight">COURSES</span></h3>
             <p class="our-courses-description">At our photography school, we offer a variety of courses that cover all aspects of this fascinating art. Regardless of your experience or skill level, we have courses to suit your needs and goals.</p>
           </div>
           <div class="our-content">
-            <p>This is additional content for section 1.</p>
+            <div class="course-card">
+              <div class="course-image-container">
+                <p class="course-number">01</p>
+                <div class="course-image-wrapper">
+                  <img src="images/course1.jpg" alt="Course 1" class="course-image" />
+                </div>
+              </div>
+              <h4 class="course-title">Basics of photography</h4>
+              <p class="course-description">During this course, you will be able to familiarize yourself with different types of cameras, learn the basics of composition.</p>
+          </div>
+                      <div class="course-card">
+              <div class="course-image-container">
+                <p class="course-number">02</p>
+                <div class="course-image-wrapper">
+                  <img src="images/course1.jpg" alt="Course 1" class="course-image" />
+                </div>
+              </div>
+              <h4 class="course-title">Landscape photography</h4>
+              <p class="course-description">In this course, you'll learn how to choose the right angles, frame landscapes, and create depth and perspective in your images.</p>
+          </div>
+                      <div class="course-card">
+              <div class="course-image-container">
+                <p class="course-number">03</p>
+                <div class="course-image-wrapper">
+                  <img src="images/course1.jpg" alt="Course 1" class="course-image" />
+                </div>
+              </div>
+              <h4 class="course-title">Portrait photography</h4>
+              <p class="course-description">During this course, you will learn to choose the right lighting, reproduce the mood and expressions on the faces of the models.</p>
+          </div>
+        </div>
+      </section>
+      <section id="our-mentors-section">
+        <h4 class="mentors-title">OUR <span class="mentors-highlight">Mentors</span></h4>
+        <div class="mentors-container">
+              <div class="mentor-image-container">
+                <img src="images/mentor1.jpg" alt="Emilia Smith" class="mentor-image" />
+              <h5 class="mentor-name">Emilia Smith</h5>
+              </div>
+              <div class="mentor-image-container">
+              <p class="mentor-bio"> 1.5 years of experience</p>
+                <img src="images/mentor2.jpg" alt="Alex Lebedev" class="mentor-image" />
+              <h5 class="mentor-name">Alex Lebedev</h5>
+              <p class="mentor-bio"> 3.5 years of experience</p>
+              </div>
+              <div class="mentor-image-container">
+                <img src="images/mentor3.jpg" alt="Mia Dubrovska" class="mentor-image" />
+              <h5 class="mentor-name">Mia Dubrovska</h5>
+              <p class="mentor-bio"> 2.0 years of experience</p>
+              </div>
+              <div class="mentor-image-container">
+                <img src="images/mentor4.jpg" alt="Eliot Kovalev" class="mentor-image" />
+              <h5 class="mentor-name">Eliot Kovalev</h5>
+              <p class="mentor-bio"> 4.0 years of experience</p>
           </div>
         </div>
       </section>
