sign-up-section

--- a/index.html
+++ b/index.html
@@ -150,6 +150,26 @@
           </div>
         </div>
       </section>
+      <section id="sign-up-section">
+        <div class="sign-up-container">
+          <div class="sign-up-form">
+                    <h4 class="sign-up-title">Sign <span class="sign-up-highlight">Up</span></h4>
+        <p class="sign-up-description">Please use the form below to contact us. Enter your name, email, and message and we'll get back to you shortly.</p>
+        <form class="sign-up-form">
+          <input type="text" placeholder="Enter your name" class="name-input" />
+          <input type="email" placeholder="Enter your email" class="email-input" />
+          <textarea placeholder="Enter your message" class="message-input"></textarea>
+          <button type="submit" class="sign-up-button">Send</button>
+          <p class="privacy-note">By clicking on “Send” button, you agree to our <a href="#" class="privacy-link">Privacy Policy</a>, 
+and allow Promodo to use this information for marketing purposes.</p>
+        </form>
+          </div>
+          <div class="sign-up-image">
+            <img src="images/signup1.jpg" alt="Sign Up Image" class="sign-up-image" />
+            <img src="images/signup2.png" alt="Sign Up Image" class="sign-up-image-camera" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
