--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 and allow Promodo to use this information for marketing purposes.</p>
         </form>
           </div>
-          <div class="sign-up-image">
+          <div class="sign-up-image-container">
             <img src="images/signup1.jpg" alt="Sign Up Image" class="sign-up-image" />
             <img src="images/signup2.png" alt="Sign Up Image" class="sign-up-image-camera" />
           </div>
