--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="menucontainer">
         <nav class="menu">
           <a href="#" class="header-logo">Focus.frame</a>
-          <ul>
+          <ul class="menu-list">
             <li><a href="#section1">ABOUT US</a></li>
             <li><a href="#section2">OUR COURSES</a></li>
             <li><a href="#section3">OUR MENTORS</a></li>
@@ -166,7 +166,30 @@ and allow Promodo to use this information for marketing purposes.</p>
           </div>
           <div class="sign-up-image-container">
             <img src="images/signup1.jpg" alt="Sign Up Image" class="sign-up-image" />
-            <img src="images/signup2.png" alt="Sign Up Image" class="sign-up-image-camera" />
+            <img src="images/signup2.jpg" alt="Sign Up Image" class="sign-up-image-camera" />
+          </div>
+        </div>
+      </section>
+      <section id=rewievs-section>
+        <div class="reviews-container">
+          <h4 class="reviews-title">REVIEWS</h4>
+          <div class="review-card-container">
+          <div class="review-card">
+            <div class="review-card-icon">
+            <img src="images/quote.jpg" alt="Quote Icon" class="quote-icon" />
+            <p class="review-author"> Abraham Baker</p>
+            <p class="review-work">Student</p>
+            </div>
+            <p class="review-text">I am very pleased that I decided to enroll in photography school. The teachers turned out to be very talented and experienced professionals who share their knowledge and are dedicated to their work. I was able to expand my skills and discover my own style.</p>
+          </div>
+          <div class="review-card">
+            <div class="review-card-icon">
+            <img src="images/quote.jpg" alt="Quote Icon" class="quote-icon" />
+            <p class="review-author">Amanda Lowery</p>
+            <p class="review-work">Student</p>
+            </div>
+            <p class="review-text">The courses at the photography school exceeded all my expectations. I gained not only technical knowledge, but also inspiration and motivation to reach new heights in my creativity. Hands-on classes and workshops helped me understand different styles of photography.</p>
+          </div>
           </div>
         </div>
       </section>
