--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#section2">OUR COURSES</a></li>
             <li><a href="#section3">OUR MENTORS</a></li>
             <li><a href="#section4">REVIEWS</a></li>
-            <li><a href="#section5">CONTACT</a></li>
+            <li><a href="#section5">CONTACTS</a></li>
           </ul>
         </nav>
         <button class="menu-toggle">SIGN UP</button>
