--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="menucontainer">
         <nav class="menu">
-          <a href="#" class="header-logo">Focus.frame</a>
+          <a href="#" class="header-logo">Focus.Frame</a>
           <ul class="menu-list">
             <li><a href="#section1">ABOUT US</a></li>
             <li><a href="#section2">OUR COURSES</a></li>
