--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               translate your unique ideas.
             </p>
           </div>
-          <img src="images/foto.jpg" alt="Hero Image" class="hero-image" />
+          <img src="images/fotik.jpg" alt="Hero Image" class="hero-image" />
         </div>
       </section>
 
