hero-image-container

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
               translate your unique ideas.
             </p>
           </div>
-          <img src="images/fotik.jpg" alt="Hero Image" class="hero-image" />
+          <div class="hero-image-container">
+            <img src="images/fotik.jpg" alt="Hero Image" class="hero-image" />
+          </div>ss
         </div>
       </section>
 
