--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="hero-image-container">
             <img src="images/fotik.jpg" alt="Hero Image" class="hero-image" />
-          </div>ss
+          </div>
         </div>
       </section>
 
