--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
       <section id="our-mentors-section">
         <div class="mentors-container">
                   <h4 class="mentors-title">OUR <span class="mentors-highlight">Mentors</span></h4>
-          <div class="">
-              <div class="mentor-image-container">
+          <div class="mentor-image-container">
+              <div class="mentor-images">
                 <img src="images/mentor1.jpg" alt="Emilia Smith" class="mentor-image" />
               <h5 class="mentor-name">Emilia Smith</h5>
               </div>
