--- a/index.html
+++ b/index.html
@@ -134,26 +134,34 @@
     <div class="mentor-image-container">
       <div class="mentor-images">
         <img src="images/mentor1.jpg" alt="Emilia Smith" class="mentor-image" />
-        <h5 class="mentor-name">Emilia Smith</h5>
+        <div class="mentor-info">
+                  <h5 class="mentor-name">Emilia Smith</h5>
         <p class="mentor-bio">1.5 years of experience</p>
+        </div>
       </div>
 
       <div class="mentor-images">
         <img src="images/mentor2.jpg" alt="Alex Lebedev" class="mentor-image" />
-        <h5 class="mentor-name">Alex Lebedev</h5>
-        <p class="mentor-bio">3.5 years of experience</p>
+        <div class="mentor-info">
+          <h5 class="mentor-name">Alex Lebedev</h5>
+          <p class="mentor-bio">3.5 years of experience</p>
+        </div>
       </div>
 
       <div class="mentor-images">
         <img src="images/mentor3.jpg" alt="Mia Dubrovska" class="mentor-image" />
-        <h5 class="mentor-name">Mia Dubrovska</h5>
+        <div class="mentor-info">
+            <h5 class="mentor-name">Mia Dubrovska</h5>
         <p class="mentor-bio">2.0 years of experience</p>
+        </div>
       </div>
 
       <div class="mentor-images">
         <img src="images/mentor4.jpg" alt="Eliot Kovalev" class="mentor-image" />
-        <h5 class="mentor-name">Eliot Kovalev</h5>
-        <p class="mentor-bio">4.0 years of experience</p>
+        <div class="mentor-info">
+          <h5 class="mentor-name">Eliot Kovalev</h5>
+          <p class="mentor-bio">4.0 years of experience</p>
+        </div>
       </div>
     </div>
   </div>
